backend working, i think

--- a/test/fixtures/bios.yml
+++ b/test/fixtures/bios.yml
@@ -2,14 +2,12 @@
 
 one:
   user_id: 
-  nickname: MyString
-  url: MyString
-  phone: MyString
+  name: MyString
+  website: MyString
   city: MyString
 
 two:
   user_id: 
-  nickname: MyString
-  url: MyString
-  phone: MyString
+  name: MyString
+  website: MyString
   city: MyString
